# MCQ-Correction

./: README.md
Back-End/: CMakeLists.txt  https_examples.cpp  main.cpp  server.cfg  server.crt  server.key
Back-End/Controller/: DownloadManager.cpp  DownloadManager.h  RequestManagement.cpp  RequestManagement.h  base64.cpp  base64.h  hash.cpp  hash.h  httpHeaders.h  loginVerification.cpp  loginVerification.h  randomString.h  token.cpp  token.h
Back-End/Controller/DownloadManager/: CMakeLists.txt  main.cpp  server.cfg
Back-End/Controller/Scan-Analyses/: MainScan.cpp  MainScan.h  MainScan_HowToUse  Scanner.cpp  Scanner.h
Back-End/Controller/String-Operations/: base64.cpp  hash.cpp  randomString.cpp  splitString.cpp  splitString.h
Back-End/Model/: DatabaseManager.cpp  DatabaseManager.h  MCQ.sql
Back-End/Simple-Web-Server/: utility.hpp
Back-End/scan_prototype2/: CMakeLists.txt  Scanner.cpp  Scanner.h  debug.h  main.cpp
Front-End/: consultStudent.html  correctStudent.html  index.html  login.html
Front-End/js/: Config.js  Student.js  Teacher.js  ajax.js  authentification.js  client-consult.js  client-index.js  client.js  config.js  requestsTEST.js  search.js  utils.js
Front-End/sql/: MCQ.sql
